--- a/src/view/pages/lang/ru.json
+++ b/src/view/pages/lang/ru.json
@@ -1,6 +1,49 @@
 {
-  "section1":{
-    "title1":"Прорыв в хранении данных на блокчейне",
-    "title2":"Предоставление неограниченных возможностей хранения"
+  "section1": {
+    "slide1": {
+      "title1": "Прорыв в хранении данных на блокчейне",
+      "title2": "Предоставление неограниченных возможностей хранения",
+      "introduce": "Lambda - это быстрый, безопасный и масштабируемый блокчейн-проект, который обеспечивает возможность хранения данных децентрализованных приложений (dAPP) с неограниченной масштабируемостью и предоставляет такие услуги, как мульти-чейн совместное хранение данных, кросс-чейн управление данными, защита конфиденциальности данных, PDP, и распределенные вычисления посредством логической развязки и независимой реализации Lambda Chain и Lambda DB",
+      "btnName":"Скачать Whitepaper "
+    },
+    "slide2":{
+      "title1": "Один маленький шаг для Lambda ",
+      "title2": "Один гигантский скачок для будущего ",
+      "title3":"Информационный поток, обусловленный финансами ",
+      "introduce": "Узнайте больше о принципах разработки экономической системы Lambda",
+      "btnName":"Экономический Whitepaper  "
+    }
+  },
+  "section2":{
+    "title":"Доказуемое Обладание Данных (PDP) Lambda Demo ",
+    "introduce":"Мы считаем, что все проекты хранилищ должны следовать основному требованию обеспечения целостности данных.Кроме того, для данных проектов крайне важно хранить данные в неуязвимых узлах хранения и сделать их надежными и безопасными. В академическом мире существуют два подхода, которые представляют собой Доказуемое Обладание Данных (PDP) и Доказательство Возвратности (POR) в зависимости от технологической ситуации.Команда проекта Lambda применила эти два подхода на блокчейне через академические исследования и инженерную проверку, которая устранила основные препятствия для децентрализованного хранения.",
+    "btnName":"Скачать Демо-версию "
+  },
+  "section3":{
+    "title":"ВОЗМОЖНОСТИ ПРИМЕНЕНИЯ ",
+    "item1":{
+      "title":"Надежное и безопасное хранение данных ",
+      "introduce":"Разработка и совместное использование данных является движущей силой развития индустрии данных и является неотъемлемой частью будущего мира.В настоящее время данные хранятся в централизованном частном дата-центре, где, как было доказано, у модели, полученной и проанализированной стороной потребителей, есть большие недостатки: отсутствие прозрачности транзакций и отсутствие гарантированного права собственности и контроля. Наша основная идея заключается в том, чтобы содействовать обмену данными и достигать общей выгоды от отдельного хранилища QoS всех типов данных, которые могут быть общедоступны и проверены анонимно через Lambda."
+    },
+    "item2":{
+      "title":"Доступ к публичным данным и транзакциям ",
+      "introduce":"В настоящее время люди генерируют невероятно большое количество информации, тем самым требуя инфраструктуры данных для обеспечения такого совместного доступа к данным и транзакциям, таких как медицина, образование, транспорт, энергетика, сельское хозяйство, погода, гидрология, научные исследования, данные общественной безопасности и так далее.Эти общедоступные данные могут быть распределены, проверены, сохранены, проанализированы, проданы и использованы на платформе Lambda. "
+    },
+    "item3":{
+      "title":"Контроль доступа и защита персональных данных  ",
+      "introduce":"Информационная Эпоха порождает огромные проблемы с владением персональных данных.Обычно сборщики данных имеют неограниченное право на интерпретацию и использование данных.С внедрением GDPR и других законопроектов обострение между конфиденциальностью данных между отдельными лицами, предприятиями и правительствами становится все более острым. Lambda обеспечивает надежную, безопасную и защищенную экосистему с возможностью хранения и доступа к данным посредством дифференциальной конфиденциальности, шифрования и подписи данных, аутентификации идентификации и контроля доступа, а также зашифрованной передачи."
+    },
+    "item4":{
+      "title":"dApps и Blockchain ",
+      "introduce":"На данный момент многие dApp-проекты сталкиваются с риском отказа от реализации - одной из главных причин является нехватка инфраструктуры хранения данных. Фактически, суть приложения, централизованная или децентрализованная, - это реализация бизнес-логики, отображения интерфейса и взаимодействия пользователей с доступом к данным.Таким образом, инфраструктура данных является основной проблемой блокчейнов и децентрализованных приложений (dApps).В настоящее время блокчейн-регистры не подходят для хранения бизнес-данных, как и IPFS не может хранить отформатированные данные доступа к программе. В это же время проект Lambda обеспечивает бесконечно масштабируемые децентрализованные возможности сбора, хранения и доступа к данным благодаря особому развязыванию библиотечных директорий, изоморфным функциям саб-чейн архитектуры и общедоступным доказательствам владения данными."
+    },
+    "item5":{
+      "title":"Хранилище данных для Интернета Вещей (IoT) ",
+      "introduce":"Данные IoT являются массивными и структурированными, процесс генерации которых может обеспечить достоверность данных. Данные IoT занимают большое количество пространства для хранения, в то время как значение отдельных данных невелико. Для этого необходимы длительная работа и значительные ресурсы хранения и вычислений для извлечения ценности из данных. Цифровая валюта Lambda может измерять ценность небольших данных, мотивируя людей делиться и предоставлять ресурсы вычислительного хранилища для получения токенов.Lambda предоставляет систему сбора данных, передачи данных, хранения данных, обработки данных и транзакций данных в области IoT.С помощью этой системы данные, собранные с помощью датчиков, таких как данные дистанционного зондирования спутников, гидрологические данные и атмосферные данные, могут быть рассчитаны в разных измерениях и проданы через смарт-контракты кому-либо, например, учреждениям, которые нуждаются в нем."
+    },
+    "item6":{
+      "title":"Данные искусственного интеллекта (ИИ) ",
+      "introduce":"В области ИИ нынешнее соглашение заключается в том, что роль данных во много раз больше, чем роль их представления. Однако приобретение метаданных является сложной и дорогостоящей проблемой.Недостаток данных препятствует развитию индустрии ИИ.В настоящее время из-за отсутствия доверия, злоупотребления данными и других причин люди не желают предоставлять данные, вследствие чего бизнес-организациям приходиться получать важные им данные с помощью нетрадиционных средств. Lambda в планирует разработать интегрированную сеть с огромным пространством для хранения данных, где владельцы данных могут обменивать свои данные через смарт-контракты на торговой платформе Lambda. В частности, значение данных временного ряда лежит в результате обработки данных после анализа. Владельцам данных не нужно продавать исходные данные, а обменивать только результаты анализа данных."
+    }
   }
 }
