添加俄语数据

--- a/src/view/pages/lang/ru.json
+++ b/src/view/pages/lang/ru.json
@@ -45,5 +45,55 @@
       "title":"Данные искусственного интеллекта (ИИ) ",
       "introduce":"В области ИИ нынешнее соглашение заключается в том, что роль данных во много раз больше, чем роль их представления. Однако приобретение метаданных является сложной и дорогостоящей проблемой.Недостаток данных препятствует развитию индустрии ИИ.В настоящее время из-за отсутствия доверия, злоупотребления данными и других причин люди не желают предоставлять данные, вследствие чего бизнес-организациям приходиться получать важные им данные с помощью нетрадиционных средств. Lambda в планирует разработать интегрированную сеть с огромным пространством для хранения данных, где владельцы данных могут обменивать свои данные через смарт-контракты на торговой платформе Lambda. В частности, значение данных временного ряда лежит в результате обработки данных после анализа. Владельцам данных не нужно продавать исходные данные, а обменивать только результаты анализа данных."
     }
+  },
+  "section4":{
+    "title":"ДИЗАЙН АРХИТЕКТУРЫ",
+    "item1":{
+      "title":"Lambda Chain",
+      "introduce":"Изоморфная мульти-чейн система Lambda Chain, обеспечивающая высокие скоростные показатели, Полные по Тьюрингу смарт-контракты, кросс-чейн торговые возможности и т. д. "
+    },
+    "item2":{
+      "title":"Инфраструктура Lambda DB ",
+      "introduce":"Lambda DB, поддерживающая базовую инфраструктурную систему, включая систему хранения блоков и распределенную файловую систему Lambda FS. "
+    },
+    "item3":{
+      "title":"Lambda TPA",
+      "introduce":"Группа проверки целостности данных, состоящая из нескольких узлов верификатора Lambda TPA Chain. "
+    },
+    "item4":{
+      "title":"Lambda Agent",
+      "introduce":"Адаптивная зондовая система Lambda Agent, обеспечивающая хранение данных памяти, мониторинг производительности, мониторинг безопасности и возможности загрузки метрических данных. "
+    },
+    "item5":{
+      "title":"Lambda ABE",
+      "introduce":"Система доступа к аутентификации на основе атрибутов, состоящая из многоузлового консенсуса Lambda ABE, шлюзов контроля доступа к базам данных. "
+    },
+    "item6":{
+      "title":"Lambda P2P",
+      "introduce":"Пиринговая сетевая система Lambda p2p, обеспечивающая адресацию сетевого уровня. "
+    },
+    "item7":{
+      "title":"Lambda DB",
+      "introduce":"Многозадачная кластерная система Lambda DB, обеспечивающая неограниченное шифрованное защищенное хранилище данных. "
+    }
+  },
+  "section5":{
+    "title":"ПРИНЦИП РАБОТЫ ",
+    "item1":{
+      "title":"Изоморфный Мульти-Чейн ",
+      "introduce":"Lambda Chain - изоморфная мульти-чейн конструкция, содержащая в себе - MainChain, WorkChain и ShardChain. За исключением MainChain, все WorkChains состоят из нескольких ShardChains. Среди них консенсусный механизм MainChainNominated - это NPos Proof-of-Stake, а консенсусным механизмом ShardChain является HoneyBadgerBFT.MainChain является основной цепью и цепью ретрансляции всех цепей и имеет все узлы, включая узлы номинантов, узлы проверки и узлы фишерманов."
+    },
+    "item2":{
+      "title":"Sharding ",
+      "introduce":"Любой WorkChain назначается MainChain-ом в качестве узла проверки, ответственного за структуру и блокировку транзакций. Механизм Sharding осуществляется через консенсус BFT после группировки узлов проверки.. Чтобы внедрить управление системой базы данных, команда Lambda реализовала первые три подцепочки, а именно WorkChain1, который разрешает, записывает и пересылает запросы данных, WorkChain2, который выполняет статистические данные об условиях реагирования данных и проводит консенсусное управление в базе данных узлов и WorkChain3, который проверяет целостность данных.В будущем Lambda может достичь большего количества функций, добавив дополнительные саб-чейны."
+    },
+    "item3":{
+      "title":"Доказательство владения данными ",
+      "introduce":"Децентрализованные облачные хранилища и облачные базы данных, по сравнению с централизованными облачными сервисами, различаются больше всего в узлах хранения без разрешения, а пользователи облачных сервисов не могут сертифицировать инициаторов или полностью доверенные узлы TPA. В дизайне Lambda мы приняли две обновленные версии публично аутентифицированного PDP-метода - BLS-PDP и MF-PDP. Мы будем совместно выполнять работу однонаправленного TPA с помощью множества точек проверки достоверности, то есть завершить проверку прав собственности и целостности данных и записать результаты проверки в цепочку для проверки FisherMan. "
+    },
+    "item4":{
+      "title":"Контроль доступа и шифрование ",
+      "introduce":"Данные на блокчейне являются общедоступными, что значительно ограничивает сценарий приложения данных.Для расширения спектра возможностей Lambda предоставляет программу управления доступом на основе шифрования атрибутов с несколькими полномочиями, а также возможность шифрования данных с отменой атрибута через прокси-шифрование. С абонентской программой шифрования на основе ABE в Lambda можно гибко реализовывать правила управления доступом, которые могут значительно снизить накладные расходы на сети и пользовательские конечные вычисления и одновременно могут противостоять однопользовательской организации для получения идентификационной информации пользователя, тем самым обеспечивая конфиденциальность идентификации пользователя. "
+    }
   }
 }
