--- a/src/view/pages/lang/ru.json
+++ b/src/view/pages/lang/ru.json
@@ -95,5 +95,57 @@
       "title":"Контроль доступа и шифрование ",
       "introduce":"Данные на блокчейне являются общедоступными, что значительно ограничивает сценарий приложения данных.Для расширения спектра возможностей Lambda предоставляет программу управления доступом на основе шифрования атрибутов с несколькими полномочиями, а также возможность шифрования данных с отменой атрибута через прокси-шифрование. С абонентской программой шифрования на основе ABE в Lambda можно гибко реализовывать правила управления доступом, которые могут значительно снизить накладные расходы на сети и пользовательские конечные вычисления и одновременно могут противостоять однопользовательской организации для получения идентификационной информации пользователя, тем самым обеспечивая конфиденциальность идентификации пользователя. "
     }
+  },
+  "section6":{
+    "title":"ЭКОСИСТЕМА",
+    "introduce":"В отличие от других блокчейнов, Lambda - это инфраструктурное хранения данных на блокчейне. Участниками этой экосистемы являются разработчики dApps, сетевые узлы, узлы хранения и другие участники, в которых сетевые узлы включают в себя номинантов, валидаторов и фишерманов. Lambda обеспечивает возможности хранения, вычисления, перемещения и ряд других услуг. Таким образом поставщики услуг различного назначения также охватывают взаимозависимую экосистему Lambda."
+  },
+  "section7":{
+    "title":"Информация о токене "
+  },
+  "section8":{
+    "title":"ПЛАН ДЕЙСТВИЙ ",
+    "item1":{
+      "title":"Этап I Технологическая демонстрация и исследования Lambda ",
+      "introduce1":"Усердное исследование технической структуры каждого публичного блокчейна и протокольных уровней.",
+      "introduce2":"Демонстрация вычислительных и проектных макетов для массовых данных в целевой среде.",
+      "introduce3":"Демонстрация сочетания бизнес-модели OAS и экономики токенов."
+    },
+    "item2":{
+      "title":"Этап II Технологическая демонстрация и исследование Lambda ",
+      "introduce1":"Выбор подходящего механизма согласования блокчейна и определение высокоскоростной архитектуры системы, используя схему Sharding, а также консенсусный алгоритм HoneyBadgerBFT для саб-чейнов.",
+      "introduce2":"",
+      "introduce3":"",
+      "introduce4":"",
+      "introduce5":"",
+      "introduce6":""
+    },
+    "item3":{
+      "title":"",
+      "introduce1":"",
+      "introduce2":"",
+      "introduce3":"",
+      "introduce4":"",
+      "introduce5":"",
+      "introduce6":""
+    },
+    "item4":{
+      "title":"",
+      "introduce1":"",
+      "introduce2":"",
+      "introduce3":"",
+      "introduce4":""
+    },
+    "item5":{
+      "title":"",
+      "introduce1":"",
+      "introduce2":"",
+      "introduce3":""
+    },
+    "item6":{
+      "title":"",
+      "introduce1":"",
+      "introduce2":""
+    }
   }
 }
