--- a/src/view/pages/lang/ru.json
+++ b/src/view/pages/lang/ru.json
@@ -1,4 +1,21 @@
 {
+  "head": {
+		"menu1": "ВОЗМОЖНОСТИ ПРИМЕНЕНИЯ",
+    "menu2": "ПРИНЦИП РАБОТЫ",
+    "menu3": "ЭКОСИСТЕМА",
+    "menu4": "Информация о токене",
+    "menu5": "ПЛАН ДЕЙСТВИЙ",
+    "menu6": "вход в систему/регистрация"
+	},
+	"foot":{
+    "menu1": "ВОЗМОЖНОСТИ ПРИМЕНЕНИЯ",
+    "menu2": "ПРИНЦИП РАБОТЫ",
+    "menu3": "ЭКОСИСТЕМА",
+    "menu4": "Информация о токене",
+    "menu5": "ПЛАН ДЕЙСТВИЙ",
+    "menu6": "блог",
+    "menu7":"связаться с нами"
+	},
   "section1": {
     "slide1": {
       "title1": "Прорыв в хранении данных на блокчейне",
@@ -114,38 +131,39 @@
     "item2":{
       "title":"Этап II Технологическая демонстрация и исследование Lambda ",
       "introduce1":"Выбор подходящего механизма согласования блокчейна и определение высокоскоростной архитектуры системы, используя схему Sharding, а также консенсусный алгоритм HoneyBadgerBFT для саб-чейнов.",
-      "introduce2":"",
-      "introduce3":"",
-      "introduce4":"",
-      "introduce5":"",
-      "introduce6":""
+      "introduce2":"Определение структуры мульти-сабчейна для корректной работы аккаунтов соответственно с Запросами и Ответами.",
+      "introduce3":"Завершение структурного проектирования для отделения цепей от библиотек. ",
+      "introduce4":"Разработка Доказуемого Обладания Данными (PDP) и механизма управления доступом и шифрования для ABE. ",
+      "introduce5":"Определение технического маршрута и техническую схемы. ",
+      "introduce6":"Завершение работы над формализацией технической документации. "
     },
     "item3":{
-      "title":"",
-      "introduce1":"",
-      "introduce2":"",
-      "introduce3":"",
-      "introduce4":"",
-      "introduce5":"",
-      "introduce6":""
+      "title":"Этап III Разработка ключевых компонентов Lambda ",
+      "introduce1":"Проведение оценочного теста на производительность libp2p и devp2p. ",
+      "introduce2":"Реализация базовой системы хранения блоков. ",
+      "introduce3":"Разработка приватных систем Lambda Chain. ",
+      "introduce4":"Проведение технической проверки на Lambda FS. ",
+      "introduce5":"Развитие сообщества на Lambda FS и открытого исходного кода в режиме реального времени. ",
+      "introduce6":"Реализация баз данных Lambda на основе Lambda FS. ",
+      "introduce7":"Разработка Lambda-Agent на основе hotspot-точек для облегчения интеграции с существующими приложениями. "
+      
     },
     "item4":{
-      "title":"",
-      "introduce1":"",
-      "introduce2":"",
-      "introduce3":"",
-      "introduce4":""
+      "title":"Этап IV Разработка Тестовой версии Lambda Chain ",
+      "introduce1":"Разработка P2P-сети для синхронизации блок-регистров и хранения данных. Разработка виртуальной машины и  верификации встроенных контрактов.",
+      "introduce2":"Разработка интерфейса API, интерфейса RPC, командной строки и  периферийных инструментов.",
+      "introduce3":"Сеть Lambda с открытым исходным кодом. "
     },
     "item5":{
-      "title":"",
-      "introduce1":"",
-      "introduce2":"",
-      "introduce3":""
+      "title":"Этап V Разработка и установка тестовой сети на Lambda ",
+      "introduce1":"Установка широкомасштабной тестовой сети с открытым тестированием. ",
+      "introduce2":"Составление поощрительной системы с оплатой в токенах LAMB для мотивации ранних энтузиастов сообщества к разработке примеров приложений на основе Lambda.",
+      "introduce3":"Проведение квалификационных тестов и выявление уязвимостей в безопасности и обслуживании на примерах приложений на основе тестовых сетей. "
     },
     "item6":{
-      "title":"",
-      "introduce1":"",
-      "introduce2":""
+      "title":"Этап VI Работа над расширением спектра услуг, повышением качества продукта и внутренних структурных систем ",
+      "introduce1":"Этот этап будет запущен компанией для поощрения большего количества типов баз данных и возможностей обслуживания для доступа к экосистеме Lambda.",
+      "introduce2":"Изучение возможностей нагрузок на транзакционный максимум данных на основе экосистемы Lambda. "
     }
   }
 }
