处理了俄语带来的显示问题

--- a/src/view/pages/lang/en.json
+++ b/src/view/pages/lang/en.json
@@ -13,8 +13,8 @@
     "menu3": "ECOSYSTEM",
     "menu4": "TOKEN DISTRIBUTION",
     "menu5": "ROADMAP",
-    "menu6": "Blog",
-    "menu7":"Contact us"
+    "menu6": "BLOG",
+    "menu7":"CONTACT US"
 	},
   "section1": {
     "slide1": {
