修正俄语版本

--- a/src/view/lang/en.json
+++ b/src/view/lang/en.json
@@ -164,5 +164,12 @@
       "introduce1": "It will be launched by the Foundation for encouraging more database types and service capabilities to access Lambda ecology ",
       "introduce2": "To explore data transaction capability based on Lambda ecolog"
     }
+  },
+  "section9": {
+    "title1": "CORE TEAM",
+    "title2": "INVESTORS"
+  },
+  "section10": {
+    "title": "ADVISORS"
   }
 }
