完成双语版本的内容同步更新

--- a/src/view/lang/en.json
+++ b/src/view/lang/en.json
@@ -29,6 +29,15 @@
       "title3": "Information flow driven by finance",
       "introduce": "Know more about design principles of Lambda’s Economic System",
       "btnName": "Economic whitepaper"
+    },
+    "slide3": {
+      "title1": "Lambda ICO is coming on 9.19!",
+      "title2": "Offical wallet ETH Adress：0xf12f3F09010336F3677E8AC4e18a71650e634820",
+      "introduce1": "*Only trust the information from our official website and from our official Telegram group : ",
+      "introduce2": ",Please don’t use any exchange wallets or contribute without whitelist.",
+      "timeStart":"Time of Public Sale Start : 14:00 UTC ,19th SEP，2018",
+      "timeEnd":"Time of Public Sale End: 14:00 UTC ,2nd OCT，2018,or before if hard cap is reached",
+      "btnName": "Go contribution！"
     }
   },
   "section2": {
