--- a/src/view/lang/ru.json
+++ b/src/view/lang/ru.json
@@ -29,6 +29,15 @@
       "title3": "Информационный поток, обусловленный финансами ",
       "introduce": "Узнайте больше о принципах разработки экономической системы Lambda",
       "btnName": "Экономический Whitepaper"
+    },
+    "slide3": {
+      "title1": "Lambda ICO выйдет 9.19!",
+      "title2": "Официальный кошелек ETH Адрес：0xf12f3F09010336F3677E8AC4e18a71650e634820",
+      "introduce1": "*Только доверяйте информации с нашего официального сайта и нашей официальной группы Telegram: ",
+      "introduce2": ",Пожалуйста, не используйте обменные кошельки или внесите свой вклад без использования белого списка",
+      "timeStart":"Время публичной продажи Начало: 14:00 UTC, 19 SEP, 2018",
+      "timeEnd":"Время публичной продажи: 14:00 UTC, 2-й OCT, 2018 или раньше, если достигнута жесткая крышка",
+      "btnName": "Вклад!"
     }
   },
   "section2": {
